<resources>

    <string name="app_name">myhealthypup</string>

    <string name="health">Health</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>

    <string name="profile">Info</string>
    <string name="add">Add Entry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
